// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly default unit is inches 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  class="ant-modal-close-x"
                >
                  <span
                    class="anticon close-icon"
                    role="img"
                  >
                    <svgr-url
                      aria-hidden="true"
                      classname=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    />
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-body"
              >
                <div
                  class="title"
                >
                  Create Grid Array
                </div>
                <div
                  class="subtitle"
                >
                  Array Dimension
                </div>
                <div
                  class="field"
                >
                  <span
                    class="label"
                  >
                    Cols.
                  </span>
                  <div
                    class="ant-slider slider css-dev-only-do-not-override-hash ant-slider-horizontal"
                  >
                    <div
                      class="ant-slider-rail"
                    />
                    <div
                      class="ant-slider-track"
                      style="left: 0%; width: 22.22222222222222%;"
                    />
                    <div
                      class="ant-slider-step"
                    />
                    <div
                      aria-disabled="false"
                      aria-orientation="horizontal"
                      aria-valuemax="10"
                      aria-valuemin="1"
                      aria-valuenow="3"
                      class="ant-slider-handle"
                      role="slider"
                      style="left: 22.22222222222222%; transform: translateX(-50%);"
                      tabindex="0"
                    />
                  </div>
                  <div
                    class="ant-input-number ant-input-number-sm css-dev-only-do-not-override-hash ant-input-number-outlined input"
                  >
                    <div
                      class="ant-input-number-input-wrap"
                    >
                      <input
                        aria-valuemin="1"
                        aria-valuenow="3"
                        autocomplete="off"
                        class="ant-input-number-input"
                        role="spinbutton"
                        step="1"
                        type="number"
                        value="3"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="field"
                >
                  <span
                    class="label"
                  >
                    Rows
                  </span>
                  <div
                    class="ant-slider slider css-dev-only-do-not-override-hash ant-slider-horizontal"
                  >
                    <div
                      class="ant-slider-rail"
                    />
                    <div
                      class="ant-slider-track"
                      style="left: 0%; width: 22.22222222222222%;"
                    />
                    <div
                      class="ant-slider-step"
                    />
                    <div
                      aria-disabled="false"
                      aria-orientation="horizontal"
                      aria-valuemax="10"
                      aria-valuemin="1"
                      aria-valuenow="3"
                      class="ant-slider-handle"
                      role="slider"
                      style="left: 22.22222222222222%; transform: translateX(-50%);"
                      tabindex="0"
                    />
                  </div>
                  <div
                    class="ant-input-number ant-input-number-sm css-dev-only-do-not-override-hash ant-input-number-outlined input"
                  >
                    <div
                      class="ant-input-number-input-wrap"
                    >
                      <input
                        aria-valuemin="1"
                        aria-valuenow="3"
                        autocomplete="off"
                        class="ant-input-number-input"
                        role="spinbutton"
                        step="1"
                        type="number"
                        value="3"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="subtitle"
                >
                  Array Interval
                </div>
                <div
                  class="field"
                >
                  <span
                    class="label"
                  >
                    X
                  </span>
                  <div
                    class="ant-slider slider css-dev-only-do-not-override-hash ant-slider-horizontal"
                  >
                    <div
                      class="ant-slider-rail"
                    />
                    <div
                      class="ant-slider-track"
                      style="left: 0%; width: 50%;"
                    />
                    <div
                      class="ant-slider-step"
                    />
                    <div
                      aria-disabled="false"
                      aria-orientation="horizontal"
                      aria-valuemax="2"
                      aria-valuemin="0"
                      aria-valuenow="1"
                      class="ant-slider-handle"
                      role="slider"
                      style="left: 50%; transform: translateX(-50%);"
                      tabindex="0"
                    />
                  </div>
                  <div
                    class="ant-input-number-affix-wrapper ant-input-number-affix-wrapper-sm ant-input-number-affix-wrapper-without-controls css-dev-only-do-not-override-hash ant-input-number-outlined input with-unit"
                  >
                    <span
                      class="ant-input-number-prefix"
                    >
                      <span
                        class="unit"
                      >
                        inch
                      </span>
                    </span>
                    <div
                      class="ant-input-number ant-input-number-sm css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-input-number-input-wrap"
                      >
                        <input
                          aria-valuemin="0"
                          aria-valuenow="1"
                          autocomplete="off"
                          class="ant-input-number-input"
                          role="spinbutton"
                          step="1"
                          type="number"
                          value="1.00"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="field"
                >
                  <span
                    class="label"
                  >
                    Y
                  </span>
                  <div
                    class="ant-slider slider css-dev-only-do-not-override-hash ant-slider-horizontal"
                  >
                    <div
                      class="ant-slider-rail"
                    />
                    <div
                      class="ant-slider-track"
                      style="left: 0%; width: 50%;"
                    />
                    <div
                      class="ant-slider-step"
                    />
                    <div
                      aria-disabled="false"
                      aria-orientation="horizontal"
                      aria-valuemax="2"
                      aria-valuemin="0"
                      aria-valuenow="1"
                      class="ant-slider-handle"
                      role="slider"
                      style="left: 50%; transform: translateX(-50%);"
                      tabindex="0"
                    />
                  </div>
                  <div
                    class="ant-input-number-affix-wrapper ant-input-number-affix-wrapper-sm ant-input-number-affix-wrapper-without-controls css-dev-only-do-not-override-hash ant-input-number-outlined input with-unit"
                  >
                    <span
                      class="ant-input-number-prefix"
                    >
                      <span
                        class="unit"
                      >
                        inch
                      </span>
                    </span>
                    <div
                      class="ant-input-number ant-input-number-sm css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-input-number-input-wrap"
                      >
                        <input
                          aria-valuemin="0"
                          aria-valuenow="1"
                          autocomplete="off"
                          class="ant-input-number-input"
                          role="spinbutton"
                          step="1"
                          type="number"
                          value="1.00"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-modal-footer"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                  type="button"
                >
                  <span>
                    Cancel
                  </span>
                </button>
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                  type="button"
                >
                  <span>
                    Confirm
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should render correctly default unit is mm 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  class="ant-modal-close-x"
                >
                  <span
                    class="anticon close-icon"
                    role="img"
                  >
                    <svgr-url
                      aria-hidden="true"
                      classname=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    />
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-body"
              >
                <div
                  class="title"
                >
                  Create Grid Array
                </div>
                <div
                  class="subtitle"
                >
                  Array Dimension
                </div>
                <div
                  class="field"
                >
                  <span
                    class="label"
                  >
                    Cols.
                  </span>
                  <div
                    class="ant-slider slider css-dev-only-do-not-override-hash ant-slider-horizontal"
                  >
                    <div
                      class="ant-slider-rail"
                    />
                    <div
                      class="ant-slider-track"
                      style="left: 0%; width: 22.22222222222222%;"
                    />
                    <div
                      class="ant-slider-step"
                    />
                    <div
                      aria-disabled="false"
                      aria-orientation="horizontal"
                      aria-valuemax="10"
                      aria-valuemin="1"
                      aria-valuenow="3"
                      class="ant-slider-handle"
                      role="slider"
                      style="left: 22.22222222222222%; transform: translateX(-50%);"
                      tabindex="0"
                    />
                  </div>
                  <div
                    class="ant-input-number ant-input-number-sm css-dev-only-do-not-override-hash ant-input-number-outlined input"
                  >
                    <div
                      class="ant-input-number-input-wrap"
                    >
                      <input
                        aria-valuemin="1"
                        aria-valuenow="3"
                        autocomplete="off"
                        class="ant-input-number-input"
                        role="spinbutton"
                        step="1"
                        type="number"
                        value="3"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="field"
                >
                  <span
                    class="label"
                  >
                    Rows
                  </span>
                  <div
                    class="ant-slider slider css-dev-only-do-not-override-hash ant-slider-horizontal"
                  >
                    <div
                      class="ant-slider-rail"
                    />
                    <div
                      class="ant-slider-track"
                      style="left: 0%; width: 22.22222222222222%;"
                    />
                    <div
                      class="ant-slider-step"
                    />
                    <div
                      aria-disabled="false"
                      aria-orientation="horizontal"
                      aria-valuemax="10"
                      aria-valuemin="1"
                      aria-valuenow="3"
                      class="ant-slider-handle"
                      role="slider"
                      style="left: 22.22222222222222%; transform: translateX(-50%);"
                      tabindex="0"
                    />
                  </div>
                  <div
                    class="ant-input-number ant-input-number-sm css-dev-only-do-not-override-hash ant-input-number-outlined input"
                  >
                    <div
                      class="ant-input-number-input-wrap"
                    >
                      <input
                        aria-valuemin="1"
                        aria-valuenow="3"
                        autocomplete="off"
                        class="ant-input-number-input"
                        role="spinbutton"
                        step="1"
                        type="number"
                        value="3"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="subtitle"
                >
                  Array Interval
                </div>
                <div
                  class="field"
                >
                  <span
                    class="label"
                  >
                    X
                  </span>
                  <div
                    class="ant-slider slider css-dev-only-do-not-override-hash ant-slider-horizontal"
                  >
                    <div
                      class="ant-slider-rail"
                    />
                    <div
                      class="ant-slider-track"
                      style="left: 0%; width: 38.775510204081634%;"
                    />
                    <div
                      class="ant-slider-step"
                    />
                    <div
                      aria-disabled="false"
                      aria-orientation="horizontal"
                      aria-valuemax="50"
                      aria-valuemin="1"
                      aria-valuenow="20"
                      class="ant-slider-handle"
                      role="slider"
                      style="left: 38.775510204081634%; transform: translateX(-50%);"
                      tabindex="0"
                    />
                  </div>
                  <div
                    class="ant-input-number-affix-wrapper ant-input-number-affix-wrapper-sm ant-input-number-affix-wrapper-without-controls css-dev-only-do-not-override-hash ant-input-number-outlined input with-unit"
                  >
                    <span
                      class="ant-input-number-prefix"
                    >
                      <span
                        class="unit"
                      >
                        mm
                      </span>
                    </span>
                    <div
                      class="ant-input-number ant-input-number-sm css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-input-number-input-wrap"
                      >
                        <input
                          aria-valuemin="0"
                          aria-valuenow="20"
                          autocomplete="off"
                          class="ant-input-number-input"
                          role="spinbutton"
                          step="1"
                          type="number"
                          value="20.00"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="field"
                >
                  <span
                    class="label"
                  >
                    Y
                  </span>
                  <div
                    class="ant-slider slider css-dev-only-do-not-override-hash ant-slider-horizontal"
                  >
                    <div
                      class="ant-slider-rail"
                    />
                    <div
                      class="ant-slider-track"
                      style="left: 0%; width: 38.775510204081634%;"
                    />
                    <div
                      class="ant-slider-step"
                    />
                    <div
                      aria-disabled="false"
                      aria-orientation="horizontal"
                      aria-valuemax="50"
                      aria-valuemin="1"
                      aria-valuenow="20"
                      class="ant-slider-handle"
                      role="slider"
                      style="left: 38.775510204081634%; transform: translateX(-50%);"
                      tabindex="0"
                    />
                  </div>
                  <div
                    class="ant-input-number-affix-wrapper ant-input-number-affix-wrapper-sm ant-input-number-affix-wrapper-without-controls css-dev-only-do-not-override-hash ant-input-number-outlined input with-unit"
                  >
                    <span
                      class="ant-input-number-prefix"
                    >
                      <span
                        class="unit"
                      >
                        mm
                      </span>
                    </span>
                    <div
                      class="ant-input-number ant-input-number-sm css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-input-number-input-wrap"
                      >
                        <input
                          aria-valuemin="0"
                          aria-valuenow="20"
                          autocomplete="off"
                          class="ant-input-number-input"
                          role="spinbutton"
                          step="1"
                          type="number"
                          value="20.00"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-modal-footer"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                  type="button"
                >
                  <span>
                    Cancel
                  </span>
                </button>
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                  type="button"
                >
                  <span>
                    Confirm
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
